# LN-Translator

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  LN-Translator.spec  README.md  TODO.md  build-log.txt  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
backend/: __init__.py  app_entry.py  app_platform.py  app_ports.py  app_shutdown.py  app_ui.py  config.py  db.py  genres.py  main.py  models.py
backend/prompts/: base.md
backend/prompts/examples/: fantasy.md  generic.md  isekai.md  litrpg.md  modern-romance.md  mystery.md  sci-fi.md  slice-of-life.md  wuxia.md  xianxia.md  yuri-bl.md
backend/prompts/genres/: fantasy.md  generic.md  isekai.md  litrpg.md  modern-romance.md  mystery.md  sci-fi.md  slice-of-life.md  wuxia.md  xianxia.md  yuri-bl.md
backend/routes/: bookmarks.py  cache.py  chapters.py  config_kv.py  covers.py  find_replace.py  genres.py  global_glossary.py  glossary.py  imports.py  novels.py  observations.py  opus_mt.py  providers.py  quality.py  stats.py  tm.py  translate.py
backend/scripts/: _db_banner.py  ab_style_edits.py  consistency_eval.py  diff_against_edit.py  glossary_cleanup_casing.py  glossary_register_audit.py  ingest_edited_chapter.py  load_glossary_md.py  load_house_lexicon.py  normalize_existing_emphasis.py  quality_metrics.py  quality_report.py  realign_tm.py  reapply_term_casing.py  retranslate_chapter.py
backend/services/: _task_registry.py  consistency.py  covers.py  epub_export.py  find_replace.py  fr_snapshots.py  free_draft_queue.py  genres_novel.py  global_glossary.py  glossary.py  glossary_casing.py  glossary_filters.py  import_runner.py  lang_detect.py  learn_from_edits.py  llm_cache.py  observations.py  opus_mt_models.py  parser.py  pre_check.py  prompt_inputs.py  providers.py  quality_dashboard.py  queue.py  refiner.py  scrape_jobs.py  scraper.py  soft_delete.py  stats.py  text_fixups.py  text_observers.py  tm.py  translation_attempts.py  translator_catalog.py  uploads.py
backend/services/scrapers/: __init__.py  base.py  cloudflare.py  piaotian.py  sixnineshu.py  syosetu.py  uukanshu.py
backend/services/translators/: __init__.py  _claude_errors.py  _cli_base.py  _openai_errors.py  _subprocess_utils.py  anthropic_api.py  base.py  claude_agent.py  claude_cli.py  codex_cli.py  deepseek.py  deepseek_revise.py  factory.py  gemini.py  gemini_cli.py  google_translate_free.py  groq.py  mistral.py  moonshot.py  ollama.py  openai.py  openai_compatible.py  openai_compatible_generic.py  opencode.py  openrouter.py  opus_mt.py  qwen.py  xai.py  zhipu.py
backend/tests/: _recipe_atomic_helper.py  conftest.py  test_ab_style_edits_script.py  test_anthropic_caching.py  test_app_entry_pywebview_fallback.py  test_app_platform.py  test_app_ports.py  test_app_shutdown.py  test_app_ui.py  test_apply_text_fixups.py  test_atomic_classifier.py  test_bookmarks.py  test_bulk_upload.py  test_bundle_data_files.py  test_cache_genres_routes.py  test_cache_stats.py  test_cancel_translate.py  test_check_element_ids.py  test_check_em_dashes_script.py  test_claude_agent_effort.py  test_claude_agent_error_handling.py  test_claude_agent_max_turns.py  test_claude_cli_delivery.py  test_claude_errors.py  test_claude_oauth_token_env.py  test_clear_stuck_glossary_errors_script.py  test_cli_base.py  test_cloudscraper_fallback.py  test_config_kv.py  test_config_user_data_root.py  test_consistency.py  test_consistency_eval.py  test_consistency_route.py  test_covers.py  test_dash_hook_script.py  test_db_banner_script.py  test_db_orphan_recovery.py  test_deepseek_parse.py  test_delimited_parse.py  test_diff_against_edit_script.py  (+105 more)
backend/tests/fixtures/scrapers/piaotian/: chapter.html  overview.html
backend/tests/fixtures/scrapers/syosetu/: chapter.html  overview.html
backend/tests/fixtures/scrapers/uukanshu/: chapter.html  overview.html
data/rule_trials/: bundle_F_glossary_tests.md
docs/: backends.md  decisions.md  exe-build.md  gotchas.md  tooling-assessment.md  translator-audit.md
docs/superpowers/specs/: 2026-06-08-vocabulary-anchors-design.md
frontend/: find-replace.html  glossary-global.html  glossary.html  index.html  library.html  novel-overview.html  onboarding.html  quality.html  queue.html  reader.html  settings.html  stats.html
frontend/css/: base.css  find-replace.css  fonts.css  glossary.css  home.css  library.css  novel-overview.css  onboarding.css  quality.css  queue.css  reader.css  settings.css  stats.css
frontend/js/: api.js  boot.js  command-palette.js  find-replace.js  glossary-global.js  glossary.js  home.js  library.js  novel-overview.js  onboarding.js  quality.js  queue-panel.js  queue.js  reader-chapter.js  reader-consistency.js  reader-core.js  reader-edit.js  reader-glossary.js  reader-quality.js  reader-toc.js  reader.js  settings.js  spine.js  stats.js  theme.js  utils.js
scripts/: check_element_ids.py  check_em_dashes.py  clear_stuck_glossary_errors.py  dash_hook.py  fetch_fonts.py  lint.ps1  smoke-exe.ps1  smoke_initiative7.py
tools/: sqlite_ro_mcp.py
